# paraX

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: sample_1.py  sample_1_multitqdm.py  sample_2.py
parax/: __init__.py  base.py  decorators.py  process.py  threading.py
tests/: test_base_class.py  test_instantiation.py  test_threaded_class.py
