[project]
name = "parax"
version="0.0.1"
description = "python multi-thread/processing boilerplate library w/ tqdm progress bar"
requires-python = ">=3.10"
dependencies = [
    "tqdm",
]
authors = [
    { name = "fafnirz" }
]
maintainers = [
    { name = "fafnirz" }
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-env",
    "pytest-xdist",
]

[tool.setuptools.packages.find]
exclude = ["tests", "assets", "examples"]


[tools.pytest.ini_options]
test_paths = ["tests"]
addopts = [
    "-vv",
    "--import-mode=importlib",
]
env = []


